--- a/results_accessory_v3_alt_reproInv.Rmd
+++ b/results_accessory_v3_alt_reproInv.Rmd
@@ -43,7 +43,7 @@ source("scripts/functions.R")
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(1,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
-plot(accessory_inv~ReproInv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp[as.factor(species)])
+plot(accessory_inv~total_repro_inv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp[as.factor(species)])
 abline(0,1)
 abline(-0.30103,1)
 abline(-1,1)
@@ -70,12 +70,12 @@ legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
 options(scipen=10)
 par(mfrow=c(2,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(.8,1,.3,0.3))
-mod <- lm (log(total_weight)~log(ReproInv), data=subset(SummaryInd,ReproInv>0))
-plot(ReproInv~total_weight,data=subset(SummaryInd,ReproInv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
+mod <- lm (log(total_weight)~log(total_repro_inv), data=subset(SummaryInd,total_repro_inv>0))
+plot(total_repro_inv~total_weight,data=subset(SummaryInd,total_repro_inv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(fruit_weight), data=subset(SummaryInd,fruit_weight>0))
-plot(fruit_weight~total_weight,data=subset(SummaryInd,fruit_weight>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="Fruit investment (mg)",xlim=c(100,2000000),xlab="")
+plot(fruit_weight~total_weight,data=subset(SummaryInd,fruit_weight>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="Fruit weight (mg)",xlim=c(100,2000000),xlab="")
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(propagule_inv), data=subset(SummaryInd,propagule_inv>0))
@@ -84,7 +84,7 @@ legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(prepollen_all_inv), data=subset(SummaryInd,prepollen_all_inv>0))
-plot(prepollen_all_inv~total_weight,data=subset(SummaryInd,prepollen_all_inv>0), log="xy",col=col.spp[as.factor(species)], pch=16, xlab="", ylab="Prepollen investment (mg)", xlim=c(100,2000000))
+plot(prepollen_all_inv~total_weight,data=subset(SummaryInd,prepollen_all_inv>0), log="xy",col=col.spp[as.factor(species)], pch=16, xlab="", ylab="prepollen investment (mg)", xlim=c(100,2000000))
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
@@ -114,7 +114,7 @@ Results:
     - Larger-seeded species have higher accessory costs, as has been shown in other studies  
     - Also: "larger species" and species with lower seed set have higher accessory costs  
     - And: species with greater prepollination investment have higher accessory costs (since this is the majority of accessory costs for most species)  
-    - When all 4 variables put into a single model, depending on how variables expressed, transforme, different factors (seedset, seed size, maxH-species, pre-pollination costs) come out as have the best explanatory power
+    - When all 4 variables put into a single model, depending on lots of little changes, different factors (seedset, seed size, maxH-species, pre-pollination costs come out as have the best explanatory power) 
 
 Interpretation:  
     - Not sure one can separate the effect of plant size, seed set, seed size on what drive accessory costs  
@@ -230,17 +230,17 @@ legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
     
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
 par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
-mod <- lm(asin(sqrt(seedset))~asin(sqrt(RA)),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(asin(sqrt(RA))~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
+mod <- lm(asin(sqrt(seedset))~asin(sqrt(RA2)),data=subset(SummaryInd,seedset>0&seedset<1))
+plot(asin(sqrt(RA2))~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
 words.bottom.right(mod)
 
-mod <- lm(asin(sqrt(prop_propagule))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
-plot(asin(sqrt(RA))~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
+mod <- lm(asin(sqrt(prop_propagule))~asin(sqrt(RA2)),data=subset(SummaryInd,prop_propagule>0))
+plot(asin(sqrt(RA2))~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)])
 words.bottom.right(mod)
 legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
-mod <- lm(asin(sqrt(propagule_per_seed))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
-plot(asin(sqrt(RA))~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="x",pch=16,col=col.spp[as.factor(species)])
+mod <- lm(asin(sqrt(propagule_per_seed))~asin(sqrt(RA2)),data=subset(SummaryInd,prop_propagule>0))
+plot(asin(sqrt(RA2))~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="x",pch=16,col=col.spp[as.factor(species)])
 words.bottom.right.logx(mod)
 ```
 
@@ -252,17 +252,17 @@ words.bottom.right.logx(mod)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
 par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 options(scipen=20)
-mod <- lm(asin(sqrt(seedset))~log(ReproInv),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((ReproInv)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
+mod <- lm(asin(sqrt(seedset))~log(total_repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
+plot((total_repro_inv)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
 words.bottom.right.logy(mod)
 
-mod <- lm(asin(sqrt(prop_propagule))~log(ReproInv),data=subset(SummaryInd,prop_propagule>0))
-plot((ReproInv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
+mod <- lm(asin(sqrt(prop_propagule))~log(total_repro_inv),data=subset(SummaryInd,prop_propagule>0))
+plot((total_repro_inv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp[as.factor(species)],log="y")
 words.bottom.right.logy(mod)
 legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
-mod <- lm(log(propagule_per_seed)~log(ReproInv),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((ReproInv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp[as.factor(species)])
+mod <- lm(log(propagule_per_seed)~log(total_repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
+plot((total_repro_inv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp[as.factor(species)])
 words.bottom.right.logxy(mod)
 ```
 
@@ -299,46 +299,46 @@ words.bottom.right.logy(mod)
 ```{r, echo=FALSE,message=FALSE,fig.width=12, fig.height=30}
 par(mfrow=c(5,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 
-mod <- lm(log(RA)~log((propagule_inv)),data=subset(SummaryInd,RA>0&propagule_inv>0))
-plot(propagule_inv~RA,data=subset(SummaryInd,RA>0&propagule_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to propagules (mg)")
+mod <- lm(log(RA2)~log((propagule_inv)),data=subset(SummaryInd,RA2>0&propagule_inv>0))
+plot(propagule_inv~RA2,data=subset(SummaryInd,RA2>0&propagule_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to propagules (mg)")
 words.bottom.right.logxy(mod)
 
-mod <- lm(log(RA)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,RA>0&prop_propagule>0))
-plot(asin(sqrt(prop_propagule))~RA,data=subset(SummaryInd,RA>0&prop_propagule>0), log="x", pch=16,col=col.spp[as.factor(species)],ylab="propagules (as proportion repro inv)")
+mod <- lm(log(RA2)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,RA2>0&prop_propagule>0))
+plot(asin(sqrt(prop_propagule))~RA2,data=subset(SummaryInd,RA2>0&prop_propagule>0), log="x", pch=16,col=col.spp[as.factor(species)],ylab="propagules (as proportion repro inv)")
 words.bottom.left.logx(mod)
 
 
-mod <- lm(log(RA)~log((prepollen_aborted_inv)),data=subset(SummaryInd,RA>0&prepollen_aborted_inv>0))
-plot(prepollen_aborted_inv~RA,data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="pre-pollination aborted tissues (mg)")
+mod <- lm(log(RA2)~log((prepollen_aborted_inv)),data=subset(SummaryInd,RA2>0&prepollen_aborted_inv>0))
+plot(prepollen_aborted_inv~RA2,data=subset(SummaryInd,RA2<1&RA2>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="pre-pollination aborted tissues (mg)")
 words.bottom.right.logxy(mod)
 
-mod <- lm(log(RA)~asin(sqrt(prop_prepollen_aborted)),data=subset(SummaryInd,RA>0&prop_prepollen_aborted>0))
-plot(asin(sqrt(prop_prepollen_aborted))~RA,data=subset(SummaryInd,RA>0&prop_prepollen_aborted>0), pch=16,col=col.spp[as.factor(species)], log="x",ylab="pre-pollination aborted tissues (as proportion repro inv) (asin)")
+mod <- lm(log(RA2)~asin(sqrt(prop_prepollen_aborted)),data=subset(SummaryInd,RA2>0&prop_prepollen_aborted>0))
+plot(asin(sqrt(prop_prepollen_aborted))~RA2,data=subset(SummaryInd,RA2>0&prop_prepollen_aborted>0), pch=16,col=col.spp[as.factor(species)], log="x",ylab="pre-pollination aborted tissues (as proportion repro inv) (asin)")
 words.bottom.right.logx(mod)
 
-mod <- lm(log(RA)~log((prepollen_success_inv)),data=subset(SummaryInd,RA>0&prepollen_success_inv>0))
-plot(prepollen_success_inv~RA,data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="pre-pollination successful tissues (mg)")
+mod <- lm(log(RA2)~log((prepollen_success_inv)),data=subset(SummaryInd,RA2>0&prepollen_success_inv>0))
+plot(prepollen_success_inv~RA2,data=subset(SummaryInd,RA2<1&RA2>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="pre-pollination successful tissues (mg)")
 words.bottom.right.logxy(mod)
 
-mod <- lm(log(RA)~asin(sqrt(prop_prepollen_success)),data=subset(SummaryInd,RA>0&prop_prepollen_success>0))
-plot(asin(sqrt(prop_prepollen_success))~RA,data=subset(SummaryInd,RA>0&prop_prepollen_success>0), pch=16,col=col.spp[as.factor(species)], log="x",ylab="pre-pollination successful tissues (as proportion repro inv) (asin)")
+mod <- lm(log(RA2)~asin(sqrt(prop_prepollen_success)),data=subset(SummaryInd,RA2>0&prop_prepollen_success>0))
+plot(asin(sqrt(prop_prepollen_success))~RA2,data=subset(SummaryInd,RA2>0&prop_prepollen_success>0), pch=16,col=col.spp[as.factor(species)], log="x",ylab="pre-pollination successful tissues (as proportion repro inv) (asin)")
 words.bottom.right.logx(mod)
 
-mod <- lm(log(RA)~log((packaging_dispersal_inv)),data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0))
-plot(packaging_dispersal_inv~RA,data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to packaging and dispersal (mg)")
+mod <- lm(log(RA2)~log((packaging_dispersal_inv)),data=subset(SummaryInd,RA2>0&packaging_dispersal_inv>0))
+plot(packaging_dispersal_inv~RA2,data=subset(SummaryInd,RA2>0&packaging_dispersal_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to packaging and dispersal (mg)")
 words.bottom.right.logxy(mod)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
-mod <- lm(log(RA)~asin(sqrt(prop_packaging_dispersal)),data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0))
-plot(asin(sqrt(prop_packaging_dispersal))~RA,data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0), log="x", pch=16,col=col.spp[as.factor(species)],ylab="packaging and dispersal (as proportion repro inv)")
+mod <- lm(log(RA2)~asin(sqrt(prop_packaging_dispersal)),data=subset(SummaryInd,RA2>0&prop_packaging_dispersal>0))
+plot(asin(sqrt(prop_packaging_dispersal))~RA2,data=subset(SummaryInd,RA2>0&prop_packaging_dispersal>0), log="x", pch=16,col=col.spp[as.factor(species)],ylab="packaging and dispersal (as proportion repro inv)")
 words.bottom.left.logx(mod)
 
-mod <- lm(log(RA)~log((postpollen_aborted_inv)),data=subset(SummaryInd,RA>0&postpollen_aborted_inv>0))
-plot(postpollen_aborted_inv~RA,data=subset(SummaryInd,RA>0&postpollen_aborted_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to tissues aborted postpollination (mg)")
+mod <- lm(log(RA2)~log((postpollen_aborted_inv)),data=subset(SummaryInd,RA2>0&postpollen_aborted_inv>0))
+plot(postpollen_aborted_inv~RA2,data=subset(SummaryInd,RA2>0&postpollen_aborted_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to tissues aborted postpollination (mg)")
 words.bottom.right.logxy(mod)
 
-mod <- lm(log(RA)~asin(sqrt(prop_postpollen_aborted)),data=subset(SummaryInd,RA>0&prop_postpollen_aborted>0))
-plot(asin(sqrt(prop_postpollen_aborted))~RA,data=subset(SummaryInd,RA>0&prop_postpollen_aborted>0), log="x", pch=16,col=col.spp[as.factor(species)],ylab="tissues aborted postpollination (as proportion repro inv)")
+mod <- lm(log(RA2)~asin(sqrt(prop_postpollen_aborted)),data=subset(SummaryInd,RA2>0&prop_postpollen_aborted>0))
+plot(asin(sqrt(prop_postpollen_aborted))~RA2,data=subset(SummaryInd,RA2>0&prop_postpollen_aborted>0), log="x", pch=16,col=col.spp[as.factor(species)],ylab="tissues aborted postpollination (as proportion repro inv)")
 words.bottom.left.logx(mod)
 ```
 
@@ -347,12 +347,12 @@ words.bottom.left.logx(mod)
 ```{r, echo=FALSE, message=FALSE, fig.width=12, fig.height=36}
 par(mfrow=c(6,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 
-mod <- lm((prop_maxH)~log((ReproInv)),data=subset(SummaryInd,prop_maxH>0&ReproInv>0))
-plot(ReproInv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&ReproInv>0), pch=16,col=col.spp[as.factor(species)],log="y", ylab="total reproductive investment (mg)")
+mod <- lm((prop_maxH)~log((total_repro_inv)),data=subset(SummaryInd,prop_maxH>0&total_repro_inv>0))
+plot(total_repro_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&total_repro_inv>0), pch=16,col=col.spp[as.factor(species)],log="y", ylab="total reproductive investment (mg)")
 words.bottom.right.logy(mod)
 
-mod <- lm((prop_maxH)~asin(sqrt(RA)),data=subset(SummaryInd,prop_maxH>0))
-plot(asin(sqrt(RA))~prop_maxH,data=subset(SummaryInd,prop_maxH>0),pch=16,col=col.spp[as.factor(species)],ylab="RA")
+mod <- lm((prop_maxH)~asin(sqrt(RA2)),data=subset(SummaryInd,prop_maxH>0))
+plot(asin(sqrt(RA2))~prop_maxH,data=subset(SummaryInd,prop_maxH>0),pch=16,col=col.spp[as.factor(species)],ylab="RA2")
 words.bottom.left(mod)
 
 mod <- lm((prop_maxH)~log((propagule_inv)),data=subset(SummaryInd,prop_maxH>0&propagule_inv>0))
@@ -452,7 +452,7 @@ mtext("species",1, outer=TRUE,cex=1.1)
 ```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(1,.1,.7,.1), mai=c(.5,1.1,.2,0.2)) 
 tmp <- SummaryInd %>%
-  filter(ReproInv!=0&age>3) %>%
+  filter(total_repro_inv!=0&age>3) %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), prop_prepollen_all)
 
@@ -466,7 +466,7 @@ se1 <- tmp$se
 se_function(mean1,se1)
 
 tmp2 <- SummaryInd %>%
-  filter(ReproInv!=0&age>3) %>%
+  filter(total_repro_inv!=0&age>3) %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), prop_packaging_dispersal)
 
