--- a/results_growth_short.Rmd
+++ b/results_growth_short.Rmd
@@ -21,20 +21,39 @@ source("scripts/functions.R")
 - There is a positive correlation between reproductive investment vs growth investment among individuals that are reproducing: plants that grow more also allocate more to reproduction.  
 - It is also true that bigger plants allocate more to reproduction.  
 
-```{r, echo=FALSE,message=FALSE}
-par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2)) 
+```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7.5}
+par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2)) 
 mod <- lm(log(GrowthInv)~log(ReproInv),data=subset(SummaryInd,ReproInv>0))
 plot((1+ReproInv)~GrowthInv, SummaryInd, log="xy", col=col.spp[as.factor(species)],pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
 words.top.left.logxy(mod)
 legend("bottomright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 abline(0,1)
-text(5,6.5,srt=38,"RA = 0.5")
+text(2.1,3,srt=45,"RA = 0.5")
+abline(log10(3),1)
+text(2,9,srt=45,"RA = 0.75")
 abline(log10(9),1)
-text(2,23,srt=38,"RA = 0.9")
-abline(log10(.1),1)
-text(20,2.6,srt=38,"RA = 0.1")
-abline(log10(.01),1)
-text(170,2.2,srt=38,"RA = 0.01")
+text(2,25,srt=45,"RA = 0.9")
+abline(log10(19),1)
+text(2,60,srt=45,"RA = 0.95")
+abline(log10(.111),1)
+text(19,3,srt=45,"RA = 0.1")
+abline(log10(.010101),1)
+text(170,2.4,srt=45,"RA = 0.01")
+
+plot((1+ReproInv)~GrowthInv, SummaryInd, log="xy", col=col.age[as.factor(age)],pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
+legend("bottomright",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
+abline(0,1)
+text(2.1,3,srt=45,"RA = 0.5")
+abline(log10(3),1)
+text(2,9,srt=45,"RA = 0.75")
+abline(log10(9),1)
+text(2,25,srt=45,"RA = 0.9")
+abline(log10(19),1)
+text(2,60,srt=45,"RA = 0.95")
+abline(log10(.111),1)
+text(19,3,srt=45,"RA = 0.1")
+abline(log10(.010101),1)
+text(170,2.4,srt=45,"RA = 0.01")
 ```
 
 ###Plants that allocate more to reproduction (higher RA) have lower growth
