--- a/results_accessory_v3_alt_reproInv.Rmd
+++ b/results_accessory_v3_alt_reproInv.Rmd
@@ -37,7 +37,7 @@
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(1,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
-plot(accessory_inv~total_repro_inv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp(species))
+plot(accessory_inv~repro_inv,data=subset(SummaryInd,accessory_inv>0),log="xy",pch=16,col=col.spp(species))
 abline(0,1)
 abline(-0.30103,1)
 abline(-1,1)
@@ -64,8 +64,8 @@ legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
 options(scipen=10)
 par(mfrow=c(2,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(.8,1,.3,0.3))
-mod <- lm (log(total_weight)~log(total_repro_inv), data=subset(SummaryInd,total_repro_inv>0))
-plot(total_repro_inv~total_weight,data=subset(SummaryInd,total_repro_inv>0), log="xy",xlab="", col=col.spp(species), pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
+mod <- lm (log(total_weight)~log(repro_inv), data=subset(SummaryInd,repro_inv>0))
+plot(repro_inv~total_weight,data=subset(SummaryInd,repro_inv>0), log="xy",xlab="", col=col.spp(species), pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(fruit_weight), data=subset(SummaryInd,fruit_weight>0))
@@ -246,17 +246,17 @@ words.bottom.right.logx(mod)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
 par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 options(scipen=20)
-mod <- lm(asin(sqrt(seedset))~log(total_repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((total_repro_inv)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
+mod <- lm(asin(sqrt(seedset))~log(repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
+plot((repro_inv)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
 words.bottom.right.logy(mod)
 
-mod <- lm(asin(sqrt(prop_propagule))~log(total_repro_inv),data=subset(SummaryInd,prop_propagule>0))
-plot((total_repro_inv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
+mod <- lm(asin(sqrt(prop_propagule))~log(repro_inv),data=subset(SummaryInd,prop_propagule>0))
+plot((repro_inv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
 words.bottom.right.logy(mod)
 legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
 
-mod <- lm(log(propagule_per_seed)~log(total_repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((total_repro_inv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp(species))
+mod <- lm(log(propagule_per_seed)~log(repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
+plot((repro_inv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp(species))
 words.bottom.right.logxy(mod)
 ```
 
@@ -341,8 +341,8 @@ words.bottom.left.logx(mod)
 ```{r, echo=FALSE, message=FALSE, fig.width=12, fig.height=36}
 par(mfrow=c(6,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 
-mod <- lm((prop_maxH)~log((total_repro_inv)),data=subset(SummaryInd,prop_maxH>0&total_repro_inv>0))
-plot(total_repro_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&total_repro_inv>0), pch=16,col=col.spp(species),log="y", ylab="total reproductive investment (mg)")
+mod <- lm((prop_maxH)~log((repro_inv)),data=subset(SummaryInd,prop_maxH>0&repro_inv>0))
+plot(repro_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&repro_inv>0), pch=16,col=col.spp(species),log="y", ylab="total reproductive investment (mg)")
 words.bottom.right.logy(mod)
 
 mod <- lm((prop_maxH)~asin(sqrt(RA2)),data=subset(SummaryInd,prop_maxH>0))
@@ -446,7 +446,7 @@ mtext("species",1, outer=TRUE,cex=1.1)
 ```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(1,.1,.7,.1), mai=c(.5,1.1,.2,0.2)) 
 tmp <- SummaryInd %>%
-  filter(total_repro_inv!=0&age>3) %>%
+  filter(repro_inv!=0&age>3) %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), prop_prepollen_all)
 
@@ -460,7 +460,7 @@ se1 <- tmp$se
 se_function(mean1,se1)
 
 tmp2 <- SummaryInd %>%
-  filter(total_repro_inv!=0&age>3) %>%
+  filter(repro_inv!=0&age>3) %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), prop_packaging_dispersal)
 
