--- a/RA_figs.rmd
+++ b/RA_figs.rmd
@@ -82,13 +82,13 @@ results$a <- round(results$a,digits=2)
 results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="y",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age(data[[spp]]$age)
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="",xlab="",ylab="",cex=1.4, xlim=c(0,1), ylim=c(0,1),
+                    main=spp,col=col.age(data[[spp]]$age))
 }
 
 mtext("RA", 2, outer=TRUE,cex=1.2)
 mtext("proportion maximum H", 1, outer=TRUE,cex=1.2)
-legend("bottomright",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
+legend("bottomright",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
 ###RV curves by species
@@ -109,7 +109,7 @@ results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.4,
-                    main=spp,col=col.age(data[[spp]]$age)
+                    main=spp,col=col.age(data[[spp]]$age))
 }
 
 mtext("Reproductive investment (mg)", 2, outer=TRUE,cex=1.2)
@@ -137,7 +137,7 @@ results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.age(data[[spp]]$age)
+                    main=spp,col=col.age(data[[spp]]$age))
 }
 
 mtext("Vegetative investment (mg)", 2, outer=TRUE,cex=1.2)
@@ -165,16 +165,56 @@ results$r.squared <- round(results$r.squared,digits=3)
 results$p.value <- round(results$p.value,digits=3)
 results$a <- round(results$a,digits=2)
 results$b <- round(results$b,digits=2)
+results
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.mature(data[[spp]]$mature)
+                    main=spp,col=col.mature(data[[spp]]$mature))
 }
 
 mtext("Vegetative investment (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
 legend("topleft",legend=labels.mature(),col=col.mature(),pch=16, cex=1.1,bty="n")
 ```
+lmfits
+
+###Calculating cost of reproduction as a growth deficit
+```
+par(mfrow=c(1,2), cex=1, omi=c(.7,.7,.1,.1), mai=c(1.1,1.1,.4,0.2)) 
+Summary2 <- SummaryInd
+Summary2 <- merge(Summary2,select(results, -n), by=c("species"), all=TRUE)
+Summary2$predict_growth <- ((Summary2$total_weight)*(10^(Summary2$b))) + (Summary2$a)
+Summary2$cost <- Summary2$predict_growth - Summary2$growth_inv
+Summary2$cost_plus_growth <- Summary2$cost + Summary2$growth_inv
+plot(total_weight ~ cost_plus_growth,data=subset(Summary2),log="xy",col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
+abline(0,1)
+
+legend("bottomright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+
+par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+yvar <- "cost"
+xvar <- "repro_inv"
+
+data <- subset(Summary2)
+data <- split(data, data$species)
+lmfits <- lapply(data, function(x) lm(log(x[[yvar]]) ~  (log(x[[xvar]]))))
+results <- summarise_all_fits(lmfits)
+
+results$r.squared <- round(results$r.squared,digits=3)
+results$p.value <- round(results$p.value,digits=3)
+results$a <- round(results$a,digits=2)
+results$b <- round(results$b,digits=2)
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
+                    main=spp,col=col.age(data[[spp]]$age))
+  abline(0,1)                  
+}
+
+mtext("Growth deficit (mg)", 2, outer=TRUE,cex=1.2)
+mtext("Reproductive investment (mg)", 1, outer=TRUE,cex=1.2)
+legend("topleft",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
+
 
 ###Including all investment vs. growth  
 * reproducing individuals now plot closer to the "expected line" (as defined by juvenile individuals), but for most species there is still a considerable discrepency
@@ -200,7 +240,7 @@ results
 
 for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
-                    main=spp,col=col.mature(data[[spp]]$mature)
+                    main=spp,col=col.mature(data[[spp]]$mature))
 }
 
 mtext("Vegetative + reproductive investment (mg)", 2, outer=TRUE,cex=1.2)
